--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ height:auto;
 .reciept {
   
       max-width:960px;
-    
+    padding:15px;
     margin:0 auto;
     margin-top:20px;
     height: auto;
