--- a/style.css
+++ b/style.css
@@ -420,7 +420,8 @@ height:auto;
 .reciept {
   
       max-width:960px;
-    padding:10px;
+    padding-left:10px;
+    padding-right: 10px;
     margin:0 auto;
     margin-top:20px;
     height: auto;
