--- a/style.css
+++ b/style.css
@@ -736,6 +736,19 @@ hr{
 }
 .total-cost h3{
   font-size: 17px;
+  font-size: 14px;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.total-cost h3:focus{
+  outline: none !important;
 }
       .name{
         font-size: 14px;
