--- a/style.css
+++ b/style.css
@@ -138,6 +138,9 @@ color:white; */
   
 }
 .noSelect {
+  
+  transform: translate(0%);
+  transition:0.3s ease-in-out;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
