--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 @font-face {
   font-family: "Audrey";
   src: url("./fonts/Audrey-Normal.otf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Vibur&family=Wix+Madefor+Text&family=Ysabeau+Infant:wght@300&display=swap");
 @import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
