--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Vibur&family=Wix+Madefor+Text&display=swap");
-@font-face {
-  src: url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2")
-    format("woff2");
-  font-family: "Meta";
-  font-style: normal;
-  font-weight: normal;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Vibur&family=Wix+Madefor+Text&display=swap&family=Ysabeau+Infant:wght@300&family=Sacramento&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Vibur&family=Wix+Madefor+Text&display=swap"); */
+
 @font-face {
   font-family: "Audrey";
   src: url("./fonts/Audrey-Normal.otf");
@@ -13,10 +8,6 @@
   font-style: normal;
   font-display: swap;
 }
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Vibur&family=Wix+Madefor+Text&family=Ysabeau+Infant:wght@300&display=swap");
-@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
-
-@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
 
 @keyframes scrollDown {
   0% {
