--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
 html {
   scroll-behavior: smooth;
 }
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -50,42 +55,11 @@ body {
   align-items: center;
 }
 
-header {
-  background: #222;
-  background-image: repeating-linear-gradient(
-    to bottom,
-    transparent 7px,
-    rgba(0, 0, 0, 0.8) 9px,
-    rgba(0, 0, 0, 0.8) 13px,
-    transparent 13px
-  );
-
-  width: 100%;
-  height: 100px;
-  position: relative;
-  display: flex;
-  align-items: center;
-
-  flex-direction: column;
-  justify-content: center;
-}
 .elonmusk {
   -webkit-tap-highlight-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-header h2 {
-  font-family: "Vibur", cursive;
-
-  position: absolute;
-
-  font-size: 2rem;
-  font-weight: 200;
-
-  color: #fff;
-  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #0ff,
-    0 0 80px #0ff, 0 0 90px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;
 }
 
 .photo {
@@ -93,7 +67,7 @@ header h2 {
   width: 100%;
   height: auto;
   max-width: 960px;
-  margin-bottom: 10px;
+
   /* background-image: url("./Pictures/elonmusk.webp");
 background-position: center; /* Center the image */
   /* background-repeat: no-repeat; /* Do not repeat the image */
@@ -148,6 +122,7 @@ color:white; */
 .sticky {
   font-family: Roboto, sans-serif;
   color: #fff;
+
   font-size: 32px;
   font-weight: 700;
   padding: 17px;
@@ -271,7 +246,9 @@ align-items: center; */
   font-weight: 1000;
   padding-top: 15px;
 }
-
+.boldreciept {
+  font-weight: 600;
+}
 .item-input {
   font-size: 16px;
   font-weight: 600;
@@ -424,7 +401,7 @@ input::-webkit-inner-spin-button {
   justify-content: space-between;
 }
 .ese {
-  height: 250px;
+  height: 100px;
 }
 .name {
   font-size: 17px;
@@ -467,6 +444,7 @@ input::-webkit-inner-spin-button {
   display: inline-block;
   position: relative;
 }
+
 .number::after {
   content: "";
   position: absolute;
@@ -580,6 +558,65 @@ hr {
 .top:active {
   color: rgb(2, 2, 2);
 }
+
+.inputform {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+.feedback-input {
+  color: #333;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border: 2px solid #cc6666;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: 0;
+}
+.feedback-input:focus {
+  border: 2px solid #cc4949;
+}
+textarea {
+  height: 150px;
+
+  line-height: 150%;
+  resize: vertical;
+}
+.submitbtn {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  width: 100%;
+  background: #cc6666;
+  border-radius: 5px;
+  border: 0;
+  cursor: pointer;
+  color: white;
+  font-size: 18px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: all 0.3s;
+  margin-top: -4px;
+  font-weight: 700;
+}
+.contact {
+  margin-bottom: 50px;
+
+  width: 500px;
+}
+.inputform p {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  line-height: 30px;
+  font-size: 17px;
+  letter-spacing: 1px;
+  font-family: "Ysabeau Infant";
+}
 @media (max-width: 1400px) {
   .top {
     right: 20px;
@@ -603,7 +640,7 @@ hr {
     font-size: 1.6rem;
   }
   .photo {
-    width: 700px;
+    width: 100%;
   }
   .photo h1 {
     font-size: 3rem;
@@ -623,6 +660,9 @@ hr {
   }
 }
 @media (max-width: 690px) {
+  .elon {
+    height: 200px;
+  }
   header h2 {
     font-size: 1.6rem;
   }
@@ -630,7 +670,10 @@ hr {
     grid-template-columns: repeat(1, 1fr);
   }
   .photo {
-    width: 300px;
+    width: 100%;
+  }
+  .contact {
+    width: 90%;
   }
   .photo h1 {
     font-size: 1.9rem;
