--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ color:white; */
 }
 
 .photo h1 {
-  font-family: "Audrey";
-  font-size: 4rem;
+  font-family: "Arial";
+  font-size: 3rem;
   font-weight: bolder;
 }
 .noSelect {
