--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
   font-family: Roboto, sans-serif;
   color: #fff;
 
-  font-size: 32px;
+  font-size: 2.5rem;
   font-weight: 700;
   padding: 17px;
   margin-bottom: 10px;
