--- a/style.css
+++ b/style.css
@@ -37,6 +37,18 @@ body {
   border-radius: 20px;
   border: 3px solid #898989;
 }
+.ads,.ads2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: rebeccapurple;
+  max-width: 100vw;
+  overflow-x: auto;  margin: 5px auto 20px;
+}
+.ads2{
+    margin: 5px auto 20px;
+}
 body {
   min-height: 100vh;
   margin: 0;
