--- a/style.css
+++ b/style.css
@@ -37,17 +37,23 @@ body {
   border-radius: 20px;
   border: 3px solid #898989;
 }
-.ads,.ads2{
+.ads-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  background-color: rebeccapurple;
   max-width: 100vw;
-  overflow-x: auto;  margin: 5px auto 20px;
+  margin: 5px auto 20px;
+}
+
+.ads, .ads2 ,.ads1{
+  /* Set a minimum width for the containers */
+  min-width: 300px; /* Adjust as needed */
+  width: 100%; /* Allow them to take the full width if needed */
+  text-align: center;
 }
 .ads2{
-    margin: 5px auto 20px;
+    margin: 6px auto 20px;
 }
 body {
   min-height: 100vh;
